--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <ul>
               <li><a href="index.html" class="home__link">Home</a></li>
               <li><a href="products.html">Menu</a></li>
-              <li><a href="about.html">Service</a></li>
-              <li><a href="about.html">Shop</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="blog.html">Blog</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
