--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
             <div class="cart">
               <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
+              <div class="cart__count"></div>
             </div>
           </div>
         </div>
