set cart position to relative and cart count to absolute

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="cart">
               <a href="#"><img src="public\images\cart.svg" alt="cart"/></a>
-              <div class="cart__count"></div>
+              <div class="cart__count">2</div>
             </div>
           </div>
         </div>
