change nav-links position in extra small screens

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           </div>
           <div>
             <p class="light-text">
-              Grocen atssures fresh grocery every morning to your <br />
-              family without getting out in this pandemic.
+              Effortless grocery shopping with a vast selection of fresh, <br />
+              quality products, delivered conveniently to you
             </p>
           </div>
         </div>
