wrap hero section in a parent wrapper

--- a/index.html
+++ b/index.html
@@ -66,52 +66,54 @@
 
     <!-- Hero Section -->
 
-    <div class="hero-section">
-      <div class="right-hero-section">
-        <div class="intro-feature">
-          <p>
-            More than Faster
-          </p>
-          <div>
-            <img class="pear" src="public\images\pear.svg" alt="" />
-          </div>
-        </div>
-        <div class="hero-text">
-          <div>
-            <h1 class="hero-large-text">
-              Groceries <br />
-              <span class="non__break__hero__text">delivered in as <br/> </span>  <span class="non__break__hero__text">little as <span class="red-text">2 hours</span></span>
-            </h1>
-          </div>
-          <div>
-            <p class="light-text">
-              Effortless grocery shopping with a vast selection of fresh,<br />
-              quality products, delivered conveniently to you
+    <div class="hero__section__wrapper">
+      <div class="hero-section">
+        <div class="right-hero-section">
+          <div class="intro-feature">
+            <p>
+              More than Faster
             </p>
-          </div>
-        </div>
-        <div class="call-to-action">
-          <button class="order-button">Order Now</button>
-          <div class="play">
-            <div class="play-button">
-              <button class="play-wrapper">
-                <img
-                  class="play-button"
-                  src="public\images\play-64.png"
-                  alt="play-button"
-                />
-              </button>
+            <div>
+              <img class="pear" src="public\images\pear.svg" alt="" />
             </div>
-            <h2>Order Process</h2>
+          </div>
+          <div class="hero-text">
+            <div>
+              <h1 class="hero-large-text">
+                Groceries <br />
+                <span class="non__break__hero__text">delivered in as <br/> </span>  <span class="non__break__hero__text">little as <span class="red-text">2 hours</span></span>
+              </h1>
+            </div>
+            <div>
+              <p class="light-text">
+                Effortless grocery shopping with a vast selection of fresh,<br />
+                quality products, delivered conveniently to you
+              </p>
+            </div>
+          </div>
+          <div class="call-to-action">
+            <button class="order-button">Order Now</button>
+            <div class="play">
+              <div class="play-button">
+                <button class="play-wrapper">
+                  <img
+                    class="play-button"
+                    src="public\images\play-64.png"
+                    alt="play-button"
+                  />
+                </button>
+              </div>
+              <h2>Order Process</h2>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="hero-image-wrapper">
-        <img
-          src="public\images\heero-image.png"
-          alt="hero-image"
-          class="hero-image"
-        />
+        <div class="hero-image-wrapper">
+          <img
+            src="public\images\heero-image.png"
+            alt="hero-image"
+            class="hero-image"
+          />
+        </div>
       </div>
     </div>
 
