--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
             <div>
               <h1 class="hero-large-text">
                 Groceries <br />
-                <span class="non__break__hero__text">delivered in as <br/> </span>  <span class="non__break__hero__text">little as <span class="red-text">2 hours</span></span>
+                <span class="non__break__hero__text"
+                  >delivered in as <br />
+                </span>
+                <span class="non__break__hero__text"
+                  >little as <span class="red-text">2 hours</span></span
+                >
               </h1>
             </div>
             <div>
@@ -220,7 +225,8 @@
           <div class="delivery__body__text">
             <p>
               Enjoy the convenience of home delivery and let us take care of
-              your <br/> orders with utmost care and reliability.
+              your <br />
+              orders with utmost care and reliability.
             </p>
           </div>
           <div class="delivery__callTo__action">
@@ -261,8 +267,10 @@
           <div class="download__body__text">
             <p>
               Discover the Groceries app and revolutionize your shopping with
-              easy <br/> browsing, quick order placement, and doorstep delivery of
-              fresh produce <br/> and pantry essentials
+              easy <br />
+              browsing, quick order placement, and doorstep delivery of fresh
+              produce <br />
+              and pantry essentials
             </p>
           </div>
           <div class="download__callTo__action">
